[project]
name = "yes24-agent"
version = "0.1.0"
description = "Yes24 AI 에이전트 — Yes24를 라이브 소스로 쓰는 인용 기반 대화 어시스턴트"
requires-python = ">=3.10"
dependencies = [
    # 2.3.0 핀 고정: crema-ai에서 검증된 버전 (floating 시 라우터 silent 404 이력)
    "google-adk[db]==2.3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic-settings>=2.4",
    # async SQLAlchemy 필수 런타임 의존성 — google-adk[db]가 안 끌어오는 환경(macOS arm) 대비 명시
    "greenlet>=3.0",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 빌드 시스템 없는 virtual 프로젝트라 uv sync로 패키지 자체는 설치되지 않음 —
# tests/에 __init__.py가 없어 pytest가 프로젝트 루트를 sys.path에 넣지 않으므로 명시.
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# rbti/persona.py는 스프레드시트 "유형별 코멘트" 16유형 원문(강점·함정·처방 서술문)을
# 콘텐츠 데이터로 그대로 보유한다. 원문 충실성상 문장을 줄바꿈으로 쪼갤 수 없어(공백·문장이
# 바뀔 위험) 이 데이터 모듈에 한해 E501(줄 길이)만 면제한다. 다른 파일엔 영향 없다.
"yes24_agent/rbti/persona.py" = ["E501"]
